Fixed alignment issues on crew page for mobile devices

--- a/media.css
+++ b/media.css
@@ -338,8 +338,10 @@
     }
 
     #crew{
-        height: 85vh;
+        height: 80vh;
         padding-top: 0;
+        gap: 0;
+        grid-template-rows: auto 1fr 1fr;
     }
 
     .crew-left{
@@ -349,7 +351,7 @@
 
     .crew-right{
         grid-row: 2;
-        align-self: end;
+        align-self: center;
     }
 
     .commander-name span{
